# evelike-2023

./: .gitignore  CMakeLists.txt  README.md  TC-mingw.cmake  build.py
old_solosnake/: CMakeLists.txt
old_solosnake/blue/: CMakeLists.txt  hardpoints.csv  make-components.cmd  make-fonts.cmd  make-meshes.cmd  softpoints.csv  thrusters.csv
old_solosnake/blue/art_src/Asteroid2/: Asteroid.dae
old_solosnake/blue/art_src/CPU/: CPU.mtl  CPU_512.psd  CPU_Mesh.mtl
old_solosnake/blue/art_src/Capacitor/: Module_Capacitor.dae
old_solosnake/blue/art_src/DAE_Pack_08-12-2013/: CPU.dae  Capacitor.dae  Thruster.dae
old_solosnake/blue/art_src/Gun3/: TurretCannon.dae
old_solosnake/blue/art_src/Hardpoints/: Hardpoint03.dae
old_solosnake/blue/art_src/LowPolyComponenetsUVd/: CPU.dae  Capacitor.dae  Comms.dae  Electronics.dae  Generic_01.dae  Generic_02.dae  Generic_03.dae  Radar.dae  RadarDome.dae  Reactor.dae  SolarPannels.dae  Thruster.dae
old_solosnake/blue/art_src/LowPolyComponents/: CPU.dae  Capacitor.dae  Comms.dae  DiffueTexture.TGA  Electronics.dae  NormalTexture.TGA  Radar.dae  RadarDome.dae  Reactor.dae  Solar.dae  SolarSail.dae  Thruster.dae
old_solosnake/blue/art_src/Model_1_Textures/: Model_1.dae  Model_1.mtl
old_solosnake/blue/art_src/Model_2_02_Textures/: Model_2_02.mtl
old_solosnake/blue/art_src/Model_2_03_Textures/: Model_2_03.mtl  Model_2_03_PSD.psd
old_solosnake/blue/art_src/Model_2_Textures/: Model_2_Corner.mtl  Model_2_PSD.psd
old_solosnake/blue/art_src/Model_Tanks1/: Tanks_001.mtl
old_solosnake/blue/data/: blue-settings.xml  blue-user-settings.xml
old_solosnake/blue/installer_assets/: license.txt  packagedescription.txt  readme.txt
old_solosnake/blue/src/: CMakeLists.txt  blue_actionbar.cpp  blue_actionbar_widget.cpp  blue_actionbar_widgetfactory.cpp  blue_backgroundgame.cpp  blue_boardcamera.cpp  blue_boardstaterenderer.cpp  blue_codeeditor.cpp  blue_codeeditor_widget.cpp  blue_codeeditor_widgetfactory.cpp  blue_codeinspector_widget.cpp  blue_codeinspector_widgetfactory.cpp  blue_create_gamecamera.cpp  blue_datapaths.cpp  blue_deck.cpp  blue_drawasteroid.cpp  blue_drawboard.cpp  blue_drawgame.cpp  blue_drawgameboard.cpp  blue_drawmachine.cpp  blue_drawsun.cpp  blue_emptygame.cpp  blue_examplegame.cpp  blue_fxfiring.cpp  blue_fxmachineexplosion.cpp  blue_fxsense.cpp  blue_fxsound.cpp  blue_game.cpp  blue_gameaction.cpp  blue_gamebackground_widget.cpp  blue_gamebackground_widgetfactory.cpp  blue_gamebackground_widgetsfactory.cpp  blue_gamecamera.cpp  blue_gameloop.cpp  blue_gamescreen.cpp  blue_gamesfx.cpp  blue_gamestartupargs.cpp  blue_gamestate.cpp  blue_gameviewing_widget.cpp  blue_get_buildstamp.cpp  (+52 more)
old_solosnake/blue/test_blue/: CMakeLists.txt
old_solosnake/datamaker/: CMakeLists.txt  datamaker.cpp
old_solosnake/fontmaker/: CMakeLists.txt  main.cpp
old_solosnake/freetype-2.4.9/: CMakeLists.txt
old_solosnake/include/solosnake/: alignment.hpp  background_widget.hpp  background_widgetfactory.hpp  barytriangle.hpp  bestfit.hpp  bestfitrectangle.hpp  box.hpp  buttonpressoutcome.hpp  buttonreleaseoutcome.hpp  byte.hpp  bytebuffer.hpp  bytebuffer.inl  cameraball.hpp  case_insensitive_compare.hpp  checkbutton_widget.hpp  checkbutton_widgetfactory.hpp  clamp.hpp  colour.hpp  colourtriangle.hpp  commandpattern.hpp  commandpattern.inl  connection.hpp  connection.inl  contains.hpp  cursorbuttons_state.hpp  cursorstate.hpp  datadirectory.hpp  deferred_renderer.hpp  deferred_renderer_fwd.hpp  deferred_renderer_meshinstancedata.hpp  deferred_renderer_to_lua.hpp  deferred_renderer_types.hpp  directoryfiles.hpp  draginfo.hpp  dragpackage.hpp  filepath.hpp  font.hpp  fontcache.hpp  fontfamily.hpp  fontglyph.hpp  (+157 more)
old_solosnake/meshmaker/: CMakeLists.txt  meshmaker.cpp  meshmaker.hpp  meshmaker_main.cpp
old_solosnake/meshviewer/: CMakeLists.txt  meshviewer.cpp
old_solosnake/src/: CMakeLists.txt  background_widget.cpp  background_widgetfactory.cpp  barytriangle.cpp  bestfit.cpp  bestfitrectangle.cpp  bgr.cpp  bgra.cpp  box.cpp  bytebuffer.cpp  cameraball.cpp  case_insensitive_compare.cpp  checkbutton_widget.cpp  checkbutton_widgetfactory.cpp  colour.cpp  colourtriangle.cpp  connection.cpp  datadirectory.cpp  deferred_renderer.cpp  deferred_renderer_extensions.inl  deferred_renderer_shaders.inl  deferred_renderer_to_lua.cpp  deferred_renderer_types.cpp  directoryfiles.cpp  draginfo.cpp  dragpackage.cpp  font.cpp  fontcache.cpp  fontfamily.cpp  fontglyph.cpp  fontletters.cpp  fontprinter.cpp  foreachtriangle.cpp  fxtriangles.cpp  get_opengl_version.cpp  gl_err_to_string.cpp  glutwindow.cpp  gui.cpp  guicommandexecutor.cpp  guiloader.cpp  (+110 more)
old_solosnake/test_gui/include/: quickloader.hpp
old_solosnake/test_gui/src/: CMakeLists.txt  test_gui.cpp  test_layout.cpp  win32_main.cpp
old_solosnake/test_lunar/: CMakeLists.txt
old_solosnake/test_lunar/src/: CMakeLists.txt  main.cpp  test_lua.cpp  test_lunar.cpp  win32_main.cpp
old_solosnake/test_solosnake/: CMakeLists.txt
old_solosnake/test_solosnake/include/: meshsrc.hpp  quickloader.hpp
old_solosnake/test_solosnake/src/: CMakeLists.txt  Noise.cpp  generate_model_normal_tex.cpp  quickloader.cpp  test_args.cpp  test_ascii.cpp  test_attributereaders.cpp  test_barytriangle.cpp  test_bestfitrectangle.cpp  test_bytebuffer.cpp  test_case_insensitive_compare.cpp  test_colour.cpp  test_coloured_rects.cpp  test_colourtriangle.cpp  test_consolewindow.cpp  test_deferred_renderer.cpp  test_directoryfiles.cpp  test_fontletters.cpp  test_fontprinter.cpp  test_fontprinter2.cpp  test_fontprinter3.cpp  test_fontprinter4.cpp  test_fontprinter5.cpp  test_fontprinter6.cpp  test_glut_window.cpp  test_gui.cpp  test_icosahedron.cpp  test_image.cpp  test_img_cache.cpp  test_iworldobject.cpp  test_layout.cpp  test_linearregression3d.cpp  test_linesegment.cpp  test_load_models.cpp  test_loadedmodel.cpp  test_lockstepserver.cpp  test_lua.cpp  test_make_noise_texture_3d.cpp  test_make_normalmap.cpp  test_makefont.cpp  (+21 more)
old_solosnake/test_x11/: CMakeLists.txt
old_solosnake/test_x11/src/: CMakeLists.txt  main.cpp
(+694 files in other folders)
